test/integration/good/compiler-optimizations/partial_eval_zeros.stan
transformed data {
  vector[0] v = []';
  real y = 0E0;
  print(0);
  y += 0;
  print(0);
}
