test/integration/bad/data_index/non_data_index7.stan
parameters {
  array[3] real y;

}
transformed parameters {
  ordered[size(y)] z;
}
